# OpenGLHF

./: CMakeLists.txt  README.md  camera.cpp  camera.h  dbg.h  main.cpp  shaderProgram.cpp  shaderProgram.h  utils.cpp  utils.h  vertex.glsl
shaders/: object.frag.glsl  object.vert.glsl
